# reburn3

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: mingw-w64-i686.cmake
src/: define.cpp  define.h  dllmain.cpp  inject.cpp  inject.h  main.cpp  memory.cpp  memory.h  wndproc.cpp  wndproc.h
src/cxbx/: cxbxbinding.cpp  cxbxbinding.h
src/game/: cb3graphicsmanager.cpp  cb3graphicsmanager.h
src/res/: r3.psd  res.rc
